k8s/serviceClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  type: ClusterIP
  ports:
  - name: myapp-service
    port: 80
    targetPort: 7000
    protocol: TCP
