k8s/serviceLoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
  - name: myapp-service
    port: 80
    targetPort: 9000
    protocol: TCP
