k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-service
spec:
 hosts:
   - nginx-service
 http:
    - route:
      - destination:
          host: nginx-service
          subset: v1
        weight: 80
      - destination:
          host: nginx-service
          subset: v2
        weight: 20
